# nunavut

./: .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  .sonarcloud  .travis.yml  CMakeLists.txt  CONTRIBUTING.rst  Dockerfile  LICENSE.rst  NunavutConfig.cmake  NunavutConfigVersion.cmake  README.md  README.rst  build.flake8.txt  conf.py  conftest.py  cyphal-words.txt  embed_jinja.py  index.rst  noxfile.py  provision.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  sonar-project.properties  subtree.json  tox.ini  version_check_nunavut.py  version_check_pydsdl.py
docs/cmake/: .gitignore  CMakeLists.txt  CMakePresets.json  cmake.rst  main.c
docs/cmake/custom_types/ecorp/customer/: record.2.8.dsdl
src/: CMakeLists.txt  appendix.rst  conf.py  conftest.py  dev.rst  dsdl2cpp  dsdlgenj  index.rst  nnvg  pytest.ini  templates.rst  test.py
src/docs/: appendix.rst
src/libdsdl2cpp/: __init__.py  generators.py
src/nunavut/: __init__.py  __main__.py  _dependencies.py  _exceptions.py  _generators.py  _namespace.py  _postprocessors.py  _templates.py  _utilities.py  _version.py  cli.py  dependencies.py  generators.py  lib.rst  postprocessors.py  templates.py  utilities.py  version.py
src/nunavut/cli/: __init__.py  listers.py  parsers.py  runners.py
src/nunavut/jinja/: TimeSystem_0_1.h  __init__.py  environment.py  extensions.py  loaders.py
src/nunavut/jinja/jinja2/: __init__.py  asyncfilters.py  asyncsupport.py  bccache.py  compiler.py  debug.py  defaults.py  environment.py  exceptions.py  ext.py  filters.py  idtracking.py  lexer.py  loaders.py  meta.py  nativetypes.py  nodes.py  optimizer.py  parser.py  runtime.py  sandbox.py  tests.py  utils.py  visitor.py
src/nunavut/jinja/lang/: __init__.py  c.py  c.rst  cpp.py  cpp.rst  js.py  js.rst  py.py  py.rst
src/nunavut/lang/: __init__.py  _common.py  _config.py  _language.py  c.py  c.rst  cpp.py  cpp.rst  js.py  js.rst  properties.ini  properties.json  properties.yaml  py.py  py.rst
src/nunavut/lang/c/: __init__.py
src/nunavut/lang/c/support/: __init__.py  nunavut.j2  serialization.h  serialization.j2
src/nunavut/lang/c/templates/: Header.j2  ServiceType.j2  StructureType.j2  UnionType.j2  __init__.py  _composite_type.j2  _deserialize.j2  _fields.j2  _fields_as_union.j2  _init_macros.j2  _metadata.j2  _serde_functions.j2  _serialize.j2  _utils.j2  base.j2  definitions.j2  depfile.j2  deserialization.j2  serialization.j2
src/nunavut/lang/cpp/: __init__.py  _support.py  _utilities.py
src/nunavut/lang/cpp/support/: VariableLengthArray.hpp  (+6 more)
src/nunavut/lang/docgen/: __init__.py
src/nunavut/lang/html/: __init__.py
src/nunavut/lang/js/: __init__.py
src/nunavut/lang/lua/: __init__.py
src/nunavut/lang/py/: __init__.py
src/nunavut/lang/rust/: __init__.py
src/pydsdlgen/: __init__.py  generators.py  lib.rst  postprocessors.py  version.py
src/pydsdlgen/jinja/: __init__.py
src/pydsdlgen/jinja/jinja2/: __init__.py  asyncfilters.py  asyncsupport.py  bccache.py  compiler.py  debug.py  defaults.py  environment.py  exceptions.py  ext.py  filters.py  idtracking.py  lexer.py  loaders.py  meta.py  nativetypes.py  nodes.py  optimizer.py  parser.py  runtime.py  sandbox.py  tests.py  utils.py  visitor.py
src/pydsdlgen/jinja/lang/: __init__.py  c.py  c.rst  cpp.py  cpp.rst  js.rst
verification/: .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresetsVendorTemplate.json  README.rst  preset_generator.py
verification/.devcontainer/: devcontainer.json  native.Dockerfile
verification/c/suite/: ADSP-TS201_C.ldf  ADSP-TS201_CPP.ldf  generate_all_c.bat  helpers.h  test_armv7m.c  test_canard.cpp  test_compiles.cpp  test_constant.c  test_constant.dpj  test_constant.pro  test_initialization.cpp  test_override_variable_array_capacity.c  test_override_variable_array_capacity.dpj  test_override_variable_array_capacity.pro  test_serialization.c  test_serialization.dpj  test_serialization.pro  test_simple.c  test_support.c  test_support.dpj  test_support.pcf  test_support.pro  test_support_assert.cpp
verification/cmake/: dummysys.c  samd21g18a.ld  utils.cmake
verification/cmake/compiler_flag_sets/: arm-none-eabi.cmake  common.cmake  linux.cmake  native.cmake  native_common.cmake  native_w_asan.cmake  native_w_cov.cmake
verification/cmake/modules/: Findgenhtml.cmake  Findgtest.cmake  Findlcov.cmake  Findnnvg.cmake  Findo1heap.cmake  Findtox.cmake  Findunity.cmake  Findverification-coverage.cmake
verification/cmake/toolchains/: clang-native.cmake  gcc-arm-none-eabi.cmake  gcc-native.cmake  gcc-native32.cmake
verification/cpp/: .gitignore  CMakeLists.txt
verification/cpp/cmake/: utils.cmake
verification/cpp/cmake/compiler_flag_sets/: linux.cmake  native.cmake  native_common.cmake
verification/cpp/cmake/modules/: Findgtest.cmake  Findlcov.cmake  Findnnvg.cmake  Findpython3.cmake  Findvirtualenv.cmake
verification/cpp/include/nunavut/: support.hpp
verification/cpp/suite/: cetl_vla_pmr_configuration.yaml  test_armv7m.cpp  test_array_c++17-pmr.cpp  test_array_cetl++14-17.cpp  test_bitarray.cpp  test_cetl_vla_pmr.cpp  test_compiles.cpp  test_constant.cpp  test_helpers.hpp  test_large_bitset.cpp  test_serialization.cpp  test_serializer.cpp  test_support.cpp  test_unionant.cpp  test_unionant_c++14.cpp  test_unionant_pmr.cpp  test_var_len_arr.cpp  test_var_len_arr_compiles.cpp  test_variant.cpp
verification/nunavut_test_types/nested_array_types/mymsgs/: Inner.1.0.dsdl  InnerMore.1.0.dsdl  Outer.1.0.dsdl  OuterMore.1.0.dsdl  Simple.1.0.dsdl
verification/nunavut_test_types/test0/: generate_c.bat
verification/nunavut_test_types/test0/if/: B.1.0.dsdl  del.1.0.dsdl
verification/nunavut_test_types/test0/regulated/: CombinatorialExplosion.0.1.uavcan  RGB888_3840x2748.0.1.dsdl
verification/python/: README.md  _builtin_form.py  _constants.py  _manual.py  _rand.py  _textual.py  _util.py  conftest.py  generated_code_requirements.txt  noxfile.py  pyproject.toml
verification/python/suite/: __init__.py  conftest.py  test_builtin_form.py  test_constants.py  test_manual.py  test_rand.py  test_textual.py  util.py
(+264 files in other folders)
