[metadata]
name = nunavut
author = UAVCAN Development Team
author_email = dixonsco@amazon.com
url = https://uavcan.org
description = Generate code from DSDL using Jinja2 templates.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE.rst
keywords = uavcan, dsdl, can, can-bus, codegen, 
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Embedded Systems
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Build Tools
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking
    Typing :: Typed

[options]
package_dir=
    =src
packages=find:
install_requires=
    pydsdl ~= 1.1
    setuptools

zip_safe = False

python_requires = >=3.5

[options.entry_points]
console_scripts =
    nnvg = nunavut.__main__:main

[options.packages.find]
where=src
