[metadata]
name = nunavut
author = OpenCyphal Development Team
author_email = maintainers@opencyphal.org
url = https://opencyphal.org
description = Generate code from DSDL using Jinja2 templates.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_files = LICENSE.rst
keywords = uavcan, dsdl, can, can-bus, ethernet, udp, codegen, cyphal, opencyphal
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Embedded Systems
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Build Tools
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking
    Typing :: Typed

[options]
package_dir=
    =src
packages=find:
package_data={"nunavut": ["py.typed"]}
install_requires=
    pydsdl >= 1.22.0

[options.extras_require]
shell =
    argcomplete
config =
    pyyaml

zip_safe = False

python_requires >= 3.8

[options.entry_points]
console_scripts =
    nnvg = nunavut.__main__:main

[options.packages.find]
where=src
