[metadata]
name = nunavut
author = OpenCyphal Development Team
author_email = maintainers@opencyphal.org
url = https://opencyphal.org
description = Generate code from DSDL using Jinja2 templates.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_files = LICENSE.rst
keywords = uavcan, dsdl, can, can-bus, ethernet, udp, codegen, cyphal, opencyphal
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Embedded Systems
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Code Generators
    Topic :: Software Development :: Build Tools
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking
    Typing :: Typed

[options]
package_dir=
    =src
packages=find:
package_data={"nunavut": ["py.typed"]}

[options.extras_require]
shell =
    argcomplete
config =
    pyyaml

zip_safe = False

python_requires >= 3.10

[options.entry_points]
console_scripts =
    nnvg = nunavut.cli.runners:main

[options.packages.find]
where=src


# +---------------------------------------------------------------------------+
# | TOOL CONFIGURATION
# +---------------------------------------------------------------------------+

[tool:pytest]
log_file = pytest.log
log_level = DEBUG
log_cli = true
log_cli_level = WARNING
norecursedirs = submodules .* build* verification .nox
addopts = -p no:doctest

[coverage:run]
data_file = build/coverage-py/.coverage
branch=True
parallel=True
relative_files = True
include =
    src/nunavut/*
    .nox/*/lib/*/site-packages/nunavut/*

omit =
    */jinja2/*
    */markupsafe/*
    */setup.py
    */conf.py
    */public_regulated_data_types/*


[coverage:paths]
source =
    src
    .nox/*/lib/*/site-packages
    .nox/*/bin


[coverage:report]
exclude_also =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    assert False
    if False:
    if __name__ == .__main__.:
omit = *.j2

[doc8]
max-line-length = 120
verbose = 1


[mypy]
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
show_error_context = True
mypy_path = src
exclude = (jinja2|markupsafe)
python_version = 3.10

[mypy-pydsdl]
ignore_missing_imports = True

[mypy-nunavut.jinja.jinja2.*]
follow_imports = skip

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-sybil.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True
